# policydemic

./: .dockerignore  .env  .gitignore  Dockerfile  INSTALLATION_GUIDE.md  README.md  cli.py  config.ini  config.py  config_docker.ini  config_without_docker.ini  docker-compose.yml  entrypoint.sh  gov_sites.csv  init_content.sh  init_es.sh  nginx.conf  pyproject.toml  requirements.txt
backend/: README.md  functions.js  index.js  package.json
crawler/: Policy Responses to COVID19.html  imf.py  tasks.py  utils.py
crawler/COVIDPolicyWatch/: PolicyWatchSpider.py
crawler/cgrt/: CGRT.py
crawler/covid_policy_watch/: policy_watch_spider.py
crawler/gov/: scrapy.cfg
crawler/gov/gov/: items.py  pipelines.py  settings.py
crawler/ilo/: Untitled.ipynb  ilo_script.py
crawler/lad/: scrapy.cfg  settings.py
crawler/lad/lad/: gov_sites.py  items.py  middlewares.py  (+2 more)
data/: gov_sites.csv  gov_sites_november_2020.csv  non_gov_sites_november_2020.csv  sites_one.txt  sites_two.txt
elastic/: documents-index.json  example-document.json  links-index.json
frontend/: package.json
frontend/public/: index.html
nlpengine/: config.ini  country_domains.py  tasks.py  utils.py
pdfparser/: README.md  tasks.py  test_parser.py
policydemic/: celerybeat-schedule.db  train_documents_classification_model.py
policydemic/backend/: functions.js  index.js  test.js
policydemic/crawler/: README.md  utils.py
policydemic/elastic/: documents-index-2.json  documents-index.json  elasticsearch.yml
policydemic/frontend/: package-lock.json  package.json
policydemic/nlpengine/: classification_pipeline.joblib  tasks.py
policydemic/scheduler/: celeryconfig.py  tasks.py
policydemic/translator/: test_translator.py
policydemic_annotator/: test_annotator.py
scheduler/: celery.py  celeryconfig.py  tasks.py  utils.py
translator/: README.md  tasks.py
(+36 files in other folders)
