[tool.poetry]
name = "policydemic_legal_info"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scrapy = "2.^2.0"
celery = "^4.4.5"
elasticsearch = "^7.8.0"
requests = "^2.24.0"
billiard = "3.6.3.0"
pytesseract = "^0.3.4"
wand = "^0.6.1"
pandas = "^1.0.5"
ibm-watson = "^4.5.0"
textdistance = "^4.2.0"
"pdfminer.six" = "^20200726"
pypdf2 = "^1.26.0"
beautifulsoup4 = "^4.9.1"
flower = "^0.9.5"


[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = {version = "^19.10b0", allow-prereleases = true}
rope = "^0.17.0"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
